feat: Update Docker configuration for backend and frontend services
- Enhanced `docker-compose.yml` to define separate build contexts and health checks for both backend and frontend services.
- Added environment variables and volume mappings for the backend service.
- Updated the backend `Dockerfile` to include system dependencies, set environment variables, and implement a health check.
- Created a new uploads directory in the backend for file management.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,7 +5,7 @@ services:
     build: 
       context: ./backend
       dockerfile: Dockerfile
-    container_name: mpiloshini-backend
+    container_name: mpiloshini-backend-prod
     env_file:
       - ./backend/.env
     environment:
@@ -13,9 +13,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - ./backend:/app
       - backend_uploads:/app/uploads
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
@@ -30,9 +28,9 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    container_name: mpiloshini-frontend
+    container_name: mpiloshini-frontend-prod
     ports:
-      - "3000:80"
+      - "80:80"
     depends_on:
       - backend
     healthcheck:
